almost final with spacing corrections done

--- a/hlife.css
+++ b/hlife.css
@@ -42,8 +42,8 @@
         max-width:1257px;
         margin-left: auto;
         margin-right: auto;
-        padding-top:147px;
-        padding-bottom:147px;
+        /* padding-top:147px;
+        padding-bottom:147px; */
     }
 
     .fontsize_18{
@@ -112,12 +112,18 @@
         display: flex;
     }
 
+    .for_flex_desktop_reverse{
+        display: flex;
+        flex-direction: row-reverse;
+    }
+
     .logo_image_size{
         width: 424px;
     }
 
     .content_justify{
         justify-content: space-evenly;
+        align-items: center;
     }
 
     .type_image_size{
@@ -143,10 +149,11 @@
         margin-left: 0px;
         margin-right: 0px;
         background-color:#EFDCD5;
-        padding-top: 50px;
+        overflow-x: hidden;
+        /* padding-top: 50px;
         padding-bottom: 20px;
         padding-left: 25px;
-        padding-right: 25px;
+        padding-right: 25px; */
     }
 
     .drive_image{
@@ -183,11 +190,11 @@
     .user_story_desktop {
         display:none;
     }
+}
 
     #user_flows div,
     #user_flows h5,
     #user_flows h6,
-    #user_flows img{
         margin-bottom: 30px;
     }
 
@@ -199,10 +206,7 @@
     }
 
     .slick-frames {
-s
     }
-
-}
 
 .parallax-window {
     min-height: 800px;
@@ -211,4 +215,12 @@ s
 
 .slick-prev:before, .slick-next:before {
     color:red !important;
+}
+
+.section_spacing{
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 100px;
+    padding-top: 100px;
+    max-width: 100%;
 }
